--- a/index.html.template
+++ b/index.html.template
@@ -8,15 +8,22 @@
     <center>
       <h1>ＭＡＫＥＴＥＲＭ</h1>
       <hr>
-      <p>ＤＥＭＯ／ＢＯＯＫＭＡＲＫＬＥＴ　ＢＥＬＯＷ</p>
 
+      <p>ＤＥＭＯ／ＢＯＯＫＭＡＲＫＬＥＴ</p>
+
+      <strong>
       <a href="
       SCRIPT_SRC
       ">
         ＭＡＫＥＴＥＲＭ
       </a>
+      </strong>
 
-      <p>※ＵＬＴＲＡ ＧＲＡＰＨＩＣＳ ＲＥＱＵＩＲＥＳ Ａ ＦＵＮＣＴＩＯＮＩＮＧ ＩＮＴＥＲＮＥＴ ＣＯＮＮＥＣＴＩＯＮ （２４００ ＢＡＵＤ ＷＡＲＮＩＮＧ）</p>
+      <p>ＳＣＲＥＥＮ ＳＨＯＴ</p>
+      <img src="screenshot.gif"></img>
+
+      <p>※ＵＬＴＲＡ ＧＲＡＰＨＩＣＳ ＲＥＱＵＩＲＥＳ Ａ ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆ ＦＵＮＣＴＩＯＮＩＮＧ ＩＮＴＥＲＮＥＴ ＣＯＮＮＥＣＴＩＯＮ （２４００ ＢＡＵＤ ＷＡＲＮＩＮＧ）</p>
+      <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
     </center>
   </body>
 </html>
