--- a/index.html.template
+++ b/index.html.template
@@ -24,6 +24,7 @@
 
       <p>※ＵＬＴＲＡ ＧＲＡＰＨＩＣＳ ＲＥＱＵＩＲＥＳ Ａ ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆ ＦＵＮＣＴＩＯＮＩＮＧ ＩＮＴＥＲＮＥＴ ＣＯＮＮＥＣＴＩＯＮ （２４００ ＢＡＵＤ ＷＡＲＮＩＮＧ）</p>
       <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
+      <p><a href="https://github.com/gyng/maketerm">※ＧＩＴＨＵＢ　ＰＲＯＪＥＣＴ　ＰＡＧＥ</a></p>
     </center>
   </body>
 </html>
