Add max-width to screenshot in index.html

--- a/index.html.template
+++ b/index.html.template
@@ -20,7 +20,7 @@
       </strong>
 
       <p>ＳＣＲＥＥＮ　ＳＨＯＴ</p>
-      <img src="screenshot.gif"></img>
+      <img src="screenshot.gif" style="max-width: 90vw"></img>
 
       <p>※ＵＬＴＲＡ　ＧＲＡＰＨＩＣＳ　ＲＥＱＵＩＲＥＳ　Ａ　ＧＯＯＤ　ＢＬＩＴＴＥＲ　＆　ＦＵＮＣＴＩＯＮＩＮＧ　ＩＮＴＥＲＮＥＴ　ＣＯＮＮＥＣＴＩＯＮ　（２４００　ＢＡＵＤ　ＷＡＲＮＩＮＧ）</p>
       <p>※ＣＯＮＴＥＮＴ　ＳＥＣＵＲＩＴＹ　ＰＯＬＩＣＹ　ＭＡＹ　ＢＬＯＣＫ　ＳＣＲＩＰＴ　ＦＲＯＭ　ＲＵＮＮＩＮＧ</p>
