Remove broken Chrome hack, make things look more orange

--- a/index.html.template
+++ b/index.html.template
@@ -4,7 +4,7 @@
     <title>ＭＡＫＥＴＥＲＭ</title>
     <meta charset="UTF-8">
   </head>
-  <body　style="font-smooth: never; -webkit-font-smoothing: never;">
+  <body>
     <center>
       <h1>ＭＡＫＥＴＥＲＭ</h1>
       <hr>
